# learn-to-program-with-rust

01_introduction/: Cargo.toml
01_introduction/src/: main.rs
01_syntax/02_variables/src/: main.rs
02_syntax/01_variables/: Cargo.toml  main.s
02_syntax/01_variables/src/: main.rs
02_syntax/02_types_primitives/src/: main.rs
02_syntax/03_types_custom/src/: main.rs
02_syntax/04_control_flow/src/: main.rs
02_syntax/04_functions/src/: main.rs
02_syntax/05_control_flow/src/: main.rs
02_syntax/05_methods/src/: main.rs
02_syntax/06_control_flow/: Cargo.toml
02_types/: Cargo.toml
02_types/src/: main.rs
03_first_application_generate_random_numbers/: Cargo.toml
03_first_application_generate_random_numbers/src/: main.rs
04_example_application_web-server/: Cargo.toml
04_example_application_web-server/src/: lib.rs  main.rs
05_ownership/: Cargo.toml
05_ownership/src/: main.rs
06_error_management/: Cargo.toml
06_error_management/src/: main.rs
comments_and_documentation/: Cargo.toml
comments_and_documentation/src/: main.rs
