[package]
name = "example_application_web_server"
version = "0.1.0"
authors = ["fabien-h <fabien.huet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="3.3.2"
env_logger="0.8.3"
serde="1.0.123"
serde_json="1.0.62"